--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.btn1{background-color: #218573;width: 125px;height: 35px;border-radius: 15px;color: white;border: none;}
+.btn1{background-color: #21B573;width: 125px;height: 35px;border-radius: 15px;color: white;border: none;}
 .container1{margin-left: 100px;margin-right: 100px;}
 .orange{color: orange;}
 .greeny{color: #21B573}
